--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.ai-page,
-.ai-page * {
+.tech-page,
+.tech-page * {
   box-sizing: border-box;
 }
-.ai-page {
+.tech-page {
   background: #ffffff;
   height: 2340px;
   position: relative;
@@ -584,7 +584,7 @@
   left: 338px;
   top: 412px;
 }
-.reviews2 {
+.tech2 {
   color: #ffffff;
   text-align: left;
   font-family: "Lato-ExtraBold", sans-serif;
@@ -594,29 +594,16 @@
   position: absolute;
   left: 339px;
   top: 456px;
-  width: 782px;
+  width: 451px;
   height: 55px;
 }
 .rectangle-1354 {
+  background: rgba(4, 4, 4, 0.82);
   width: 1440px;
-  height: 1527px;
+  height: 1552px;
   position: absolute;
-  left: -1px;
-  top: 522px;
-  overflow: visible;
-}
-.google {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Lato-ExtraBold", sans-serif;
-  font-size: 20px;
-  line-height: 34px;
-  font-weight: 800;
-  position: absolute;
-  left: 172px;
-  top: 1563px;
-  transform-origin: 0 0;
-  transform: rotate(-90deg) scale(1, 1);
+  left: 0px;
+  top: 497px;
 }
 .page-1-of-745 {
   color: #ffffff;
@@ -631,7 +618,7 @@
   width: 91px;
   height: 42px;
 }
-.tr-tu-nh-n-t-o-ang-tr-th-nh-m-t-ph-n-quan-tr-ng-trong-cu-c-s-ng-c-a-ch-ng-ta-h-n-bao-gi-h-t-trong-khi-m-t-s-ng-i-c-th-coi-l-s-th-i-ph-ng-v-so-s-nh-n-v-i-nft-hay-tv-3-d-th-ai-ang-t-o-ra-m-t-c-s-c-l-n-trong-h-u-h-t-c-c-l-nh-v-c-c-a-ng-nh-c-ng-ngh-chat-gpt-c-a-open-ai-c-l-l-chatbot-ai-n-i-ti-ng-nh-t-hi-n-nay-nh-ng-v-i-vi-c-google-y-m-nh-gemini-microsoft-ph-t-tri-n-copilot-v-apple-ang-c-g-ng-c-i-thi-n-siri-ai-c-l-s-c-ch-trong-m-t-th-i-gian-d-i-s-p-t-i-t-i-the-verge-ch-ng-t-i-ang-kh-m-ph-nh-ng-i-u-g-c-th-x-y-ra-v-i-ai-v-c-nh-ng-i-u-ti-u-c-c-m-ai-g-y-ra-n-a {
+.tin-t-c-c-ng-ngh-m-i-nh-t-v-ph-n-c-ng-ng-d-ng-t-t-nh-t-v-i-khi-l-t-nh-t-tr-n-th-gi-i-v-nhi-u-th-ng-tin-kh-c-t-c-c-c-ng-ty-h-ng-u-nh-google-v-apple-n-nh-ng-c-ng-ty-kh-i-nghi-p-nh-ang-c-nh-tranh-thu-h-t-s-ch-c-a-b-n-verge-tech-cung-c-p-th-ng-tin-c-p-nh-t-h-ng-ng-y-v-nh-ng-i-u-quan-tr-ng-nh-t-trong-l-nh-v-c-c-ng-ngh {
   color: #ffffff;
   text-align: left;
   font-family: "Lato-Bold", sans-serif;
@@ -639,10 +626,10 @@
   line-height: 36px;
   font-weight: 700;
   position: absolute;
-  left: calc(50% - 467px);
+  left: calc(50% - 470px);
   top: 543px;
-  width: 947px;
-  height: 178px;
+  width: 950px;
+  height: 154px;
 }
 .line-19 {
   margin-top: -1px;
@@ -652,10 +639,364 @@
   width: 922px;
   height: 0px;
   position: absolute;
-  left: calc(50% - 467px);
-  top: 785.98px;
+  left: calc(50% - 461px);
+  top: 731.98px;
   transform-origin: 0 0;
   transform: rotate(-0.185deg) scale(1, 1);
+}
+.line-26 {
+  width: 922px;
+  height: 0px;
+  position: absolute;
+  left: calc(50% - 461px);
+  top: 1256.98px;
+  transform: translate(0px, -3.48px);
+  overflow: visible;
+}
+.tin-n-i-b-t {
+  position: absolute;
+  inset: 0;
+}
+.amazon-r-r-mac-mini-nh-v-i-chip-m-4-pro {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 700;
+  position: absolute;
+  left: 223px;
+  top: 1523px;
+  width: 417px;
+  height: 42px;
+}
+.thomas-ricker {
+  color: #3cffd0;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 224px;
+  top: 1564px;
+  width: 117px;
+  height: 42px;
+}
+.oct-29 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 352px;
+  top: 1564px;
+  width: 107.62px;
+  height: 41.96px;
+}
+.apple {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: 700;
+  position: absolute;
+  left: 178px;
+  top: 1611.88px;
+  width: 83.91px;
+  height: 35.14px;
+  transform-origin: 0 0;
+  transform: rotate(-90deg) scale(1, 1);
+}
+.line-17 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #3cffd0;
+  border-width: 1px 0 0 0;
+  width: 81.58px;
+  height: 0px;
+  position: absolute;
+  left: 208.75px;
+  top: 1610.72px;
+  transform-origin: 0 0;
+  transform: rotate(-90deg) scale(1, 1);
+}
+.image {
+  width: 160px;
+  height: 129px;
+  position: absolute;
+  left: 667px;
+  top: 1500px;
+  object-fit: cover;
+}
+.comment {
+  width: 46px;
+  height: 33px;
+  position: absolute;
+  left: 418px;
+  top: 1589px;
+}
+.chat-1 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: -5px;
+  top: -20px;
+  object-fit: cover;
+}
+._16 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 29px;
+  top: -26px;
+}
+.line-20 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px 0 0 0;
+  width: 17px;
+  height: 0px;
+  position: absolute;
+  left: 404px;
+  top: 1572px;
+  transform-origin: 0 0;
+  transform: rotate(89.508deg) scale(1, 1);
+}
+.t-t-c-tin-t-c-t-tu-n-l-c-ng-b-mac-c-a-apple {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 700;
+  position: absolute;
+  left: 223.03px;
+  top: 1307.32px;
+  width: 417.32px;
+}
+.jacob-kastrenakes {
+  color: #3cffd0;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 223px;
+  top: 1388px;
+  width: 140px;
+  height: 42px;
+}
+.oct-292 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 372px;
+  top: 1388px;
+  width: 107.62px;
+  height: 41.96px;
+}
+.apple-event {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: 700;
+  position: absolute;
+  left: 178px;
+  top: 1410px;
+  width: 103px;
+  height: 35px;
+  transform-origin: 0 0;
+  transform: rotate(-90deg) scale(1, 1);
+}
+.line-172 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #3cffd0;
+  border-width: 1px 0 0 0;
+  width: 92.72px;
+  height: 0px;
+  position: absolute;
+  left: 208.75px;
+  top: 1408.72px;
+  transform-origin: 0 0;
+  transform: rotate(-89.844deg) scale(1, 1);
+}
+.image2 {
+  width: 160px;
+  height: 129px;
+  position: absolute;
+  left: 667px;
+  top: 1298px;
+  object-fit: cover;
+}
+.comment2 {
+  width: 46px;
+  height: 33px;
+  position: absolute;
+  left: 418px;
+  top: 1387px;
+}
+.chat-12 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 15px;
+  top: 6px;
+  object-fit: cover;
+}
+._162 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 49px;
+  top: 0px;
+}
+.line-202 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px 0 0 0;
+  width: 17px;
+  height: 0px;
+  position: absolute;
+  left: 424px;
+  top: 1396px;
+  transform-origin: 0 0;
+  transform: rotate(89.508deg) scale(1, 1);
+}
+.gmail-s-gi-p-b-n-vi-t-email-tr-n-web-v-i-ai {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 700;
+  position: absolute;
+  left: 221px;
+  top: 1718px;
+  width: 417px;
+  height: 36px;
+}
+.emma-roth {
+  color: #3cffd0;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 224px;
+  top: 1753px;
+  width: 117px;
+  height: 42px;
+}
+.oct-293 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 325px;
+  top: 1753px;
+  width: 107.62px;
+  height: 41.96px;
+}
+.google {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: 700;
+  position: absolute;
+  left: 178px;
+  top: 1795.88px;
+  width: 83.91px;
+  height: 35.14px;
+  transform-origin: 0 0;
+  transform: rotate(-90deg) scale(1, 1);
+}
+.line-173 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #3cffd0;
+  border-width: 1px 0 0 0;
+  width: 81.58px;
+  height: 0px;
+  position: absolute;
+  left: 208.75px;
+  top: 1794.72px;
+  transform-origin: 0 0;
+  transform: rotate(-90deg) scale(1, 1);
+}
+.image3 {
+  width: 160px;
+  height: 129px;
+  position: absolute;
+  left: 667px;
+  top: 1684px;
+  object-fit: cover;
+}
+.comment3 {
+  width: 46px;
+  height: 33px;
+  position: absolute;
+  left: 418px;
+  top: 1773px;
+}
+.chat-13 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: -32px;
+  top: -15px;
+  object-fit: cover;
+}
+._01 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 2px;
+  top: -21px;
+}
+.line-203 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px 0 0 0;
+  width: 17px;
+  height: 0px;
+  position: absolute;
+  left: 377px;
+  top: 1761px;
+  transform-origin: 0 0;
+  transform: rotate(89.508deg) scale(1, 1);
 }
 .line-24 {
   margin-top: -1px;
@@ -665,36 +1006,23 @@
   width: 649px;
   height: 0px;
   position: absolute;
-  left: 341px;
-  top: 1374px;
+  left: 178px;
+  top: 1466px;
   transform-origin: 0 0;
   transform: rotate(-0.177deg) scale(1, 1);
 }
 .line-25 {
   margin-top: -1px;
   border-style: solid;
-  border-color: #3cffd0;
+  border-color: #ffffff;
   border-width: 1px 0 0 0;
-  width: 89.55px;
+  width: 649px;
   height: 0px;
   position: absolute;
-  left: 212px;
-  top: 1568.55px;
+  left: 178px;
+  top: 1650px;
   transform-origin: 0 0;
-  transform: rotate(-90deg) scale(1, 1);
-}
-.more-than-a-quarter-of-new-code-at-google-is-generated-by-ai {
-  color: #ffffff;
-  text-align: left;
-  font-family: "Lato-ExtraBold", sans-serif;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 800;
-  position: absolute;
-  left: 259px;
-  top: 1469px;
-  width: 713px;
-  height: 136px;
+  transform: rotate(-0.177deg) scale(1, 1);
 }
 .line-23 {
   margin-top: -1px;
@@ -704,8 +1032,8 @@
   width: 616px;
   height: 0px;
   position: absolute;
-  left: 273px;
-  top: 1913px;
+  left: 259px;
+  top: 1916px;
   transform-origin: 0 0;
   transform: rotate(-0.093deg) scale(1, 1);
 }
@@ -721,11 +1049,38 @@
   left: 843px;
   top: 1916px;
 }
-.group-9 {
+.content {
   position: absolute;
   inset: 0;
 }
-.google-ceo-teases-the-company-s-next-gemini-model {
+.comment4 {
+  width: 46.09px;
+  height: 33px;
+  position: absolute;
+  left: calc(50% - 105.21px);
+  top: calc(50% - -19px);
+}
+.tom-warren {
+  color: #3cffd0;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: calc(50% - 450px);
+  top: calc(50% - -8px);
+  width: 93.19px;
+}
+.image4 {
+  width: 341.69px;
+  height: 174.68px;
+  position: absolute;
+  left: calc(50% - 450px);
+  top: calc(50% - 396px);
+  object-fit: cover;
+}
+.microsoft-teams-ang-c-c-c-lu-ng-v-cu-c-tr-chuy-n-k-t-h-p-v-i-c-c-k-nh {
   color: #f8f8f8;
   text-align: left;
   font-family: "Lato-ExtraBold", sans-serif;
@@ -733,40 +1088,101 @@
   line-height: 34px;
   font-weight: 800;
   position: absolute;
-  left: calc(50% - 26.98px);
-  top: calc(50% - 54.72px);
-  width: 421.98px;
-  height: 193.32px;
+  left: calc(50% - 444px);
+  top: calc(50% - 239px);
+  width: 338.68px;
+  height: 140px;
 }
-.content {
-  width: 856.65px;
-  height: 501px;
+.c-c-cu-c-tr-chuy-n-v-k-nh-ang-c-k-t-h-p-l-i-t-o-ra-tr-i-nghi-m-h-i-tho-i-theo-lu-ng-m-i-v-o-n-m-2025 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: calc(50% - 444px);
+  top: calc(50% - 99px);
+  width: 326.66px;
+}
+.time-comment {
+  width: 167px;
+  height: 36px;
   position: static;
 }
-.comment {
-  width: 43.43px;
-  height: 32.55px;
+._8-29-am-gmt-7 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
   position: absolute;
-  left: calc(50% - -351.57px);
-  top: calc(50% - -139.45px);
+  left: calc(50% - 343px);
+  top: calc(50% - -8px);
+  width: 98px;
+  height: 28px;
 }
-.image {
-  width: 307.76px;
-  height: 267.2px;
+.line12 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px 0 0 0;
+  width: 20px;
+  height: 0px;
   position: absolute;
-  left: calc(50% - 23.81px);
-  top: calc(50% - 329px);
+  left: calc(50% - 239px);
+  top: calc(50% - -14px);
+  transform-origin: 0 0;
+  transform: rotate(90deg) scale(1, 1);
+}
+.chat-14 {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: calc(50% - 232px);
+  top: calc(50% - -14px);
   object-fit: cover;
 }
-.image2 {
-  width: 377.56px;
-  height: 253.03px;
+._47 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
   position: absolute;
-  left: calc(50% - 460.6px);
-  top: calc(50% - 329px);
+  left: calc(50% - 192px);
+  top: calc(50% - -6px);
+}
+.comment5 {
+  width: 46.09px;
+  height: 33px;
+  position: absolute;
+  left: 1087.79px;
+  top: 1189px;
+}
+.elizabeth-lopatto {
+  color: #3cffd0;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 749px;
+  top: 1107px;
+  width: 136px;
+}
+.image5 {
+  width: 341.69px;
+  height: 174.68px;
+  position: absolute;
+  left: calc(50% - -23px);
+  top: 774px;
   object-fit: cover;
 }
-.sag-aftra-has-announced-an-agreement-with-ethovox-which-is-building-a-foundational-ai-model-for-voice {
+.robinhood-th-a-nh-n-r-ng-ch-l-m-t-ng-d-ng-nh-b-c {
   color: #f8f8f8;
   text-align: left;
   font-family: "Lato-ExtraBold", sans-serif;
@@ -774,53 +1190,65 @@
   line-height: 34px;
   font-weight: 800;
   position: absolute;
-  left: calc(50% - 461.65px);
-  top: calc(50% - 61.8px);
-  width: 332.63px;
-  height: 204.45px;
+  left: calc(50% - -29px);
+  top: 931px;
+  width: 339px;
+  height: 102px;
 }
-.quentyn-kennemer {
-  color: #3cffd0;
+.y-l-t-t-c-nh-ng-g-m-th-tr-ng-c-c-c-t-ng-th-ng-ang-n-i-n {
+  color: #ffffff;
   text-align: left;
-  font-family: "Lato-ExtraBold", sans-serif;
-  font-size: 20px;
-  line-height: 34px;
-  font-weight: 800;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 18px;
+  line-height: 36px;
+  font-weight: 700;
   position: absolute;
-  left: 700.42px;
-  top: 1195.24px;
-  width: 188.25px;
-  height: 34.41px;
+  left: calc(50% - -29px);
+  top: 1033px;
+  width: 326.66px;
 }
-.quentyn-kennemer2 {
-  color: #3cffd0;
+._8-29-am-gmt-72 {
+  color: #ffffff;
   text-align: left;
-  font-family: "Lato-ExtraBold", sans-serif;
-  font-size: 20px;
-  line-height: 34px;
-  font-weight: 800;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
   position: absolute;
-  left: 252px;
-  top: 1287.35px;
-  width: 188.25px;
-  height: 34.41px;
+  left: 905px;
+  top: 1107px;
+  width: 98px;
+  height: 28px;
 }
-.quentyn-kennemer3 {
-  color: #3cffd0;
-  text-align: left;
-  font-family: "Lato-ExtraBold", sans-serif;
-  font-size: 20px;
-  line-height: 34px;
-  font-weight: 800;
+.line13 {
+  margin-top: -1px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 1px 0 0 0;
+  width: 20px;
+  height: 0px;
   position: absolute;
-  left: 258px;
-  top: 1570px;
+  left: 1009px;
+  top: 1113px;
+  transform-origin: 0 0;
+  transform: rotate(90deg) scale(1, 1);
 }
-.image3 {
-  width: 186px;
-  height: 123px;
+.chat-15 {
+  width: 24px;
+  height: 24px;
   position: absolute;
-  left: 579px;
-  top: 1467px;
+  left: 1016px;
+  top: 1113px;
   object-fit: cover;
+}
+._472 {
+  color: #ffffff;
+  text-align: left;
+  font-family: "Lato-Bold", sans-serif;
+  font-size: 13px;
+  line-height: 36px;
+  font-weight: 700;
+  position: absolute;
+  left: 1056px;
+  top: 1105px;
 }
